terraform/modules/personal_infra_setup/vpc.tf
resource "aws_vpc" "vpc" {
    cidr_block = var.vpc_cidr
    tags = {
        Name : "${var.prefix}_vpc"
    }
}
